Fix README because github's URL parser isn't so great.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Java implementation of the Odds algorithm for optimal stopping. (http://en.wikipedia.org/wiki/Odds_algorithm)
+Java implementation of the Odds algorithm for optimal stopping. See http://en.wikipedia.org/wiki/Odds_algorithm.
